# exponential_smoothing

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/exp_smooth/: ml_project.py  test.py
src/: _exponential_smoothing.rs  cobyla.rs  lib.rs  multivarmodule.rs  univar.rs  univarmodule.rs
src/multivarmodule/: multivar.rs
src/univarmodule/: univar.rs
