[package]
name = "exponential_smoothing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exponential_smoothing"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[profile.dev]
incremental = true

[profile.release]
# symbols are nice and they don't increase the size on Flash
debug = true

# Uncomment for more efficiency but less informative panics:
# panic = "abort"
# debug-assertions = false
# overflow-checks = false

# Non-parallel builds can generate more efficient code
codegen-units = 1
# Thin (compiles faster than fat, but produces slower code) LTO
lto = "thin"

[dependencies]
rayon = "1.8"
ndarray = "0.15.6"
numpy = "0.20"
cobyla = "0.5.1"


[dependencies.pyo3]
version = "0.20.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py39"]
